# Autonomous-Mobile-Robotics

./: .gitignore  .gitmodules  README.md  dependencies.yaml
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
devel/.private/my_robot/: .catkin
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  my_robot.pc
src/automaton/automaton_control/: CMakeLists.txt  package.xml
src/automaton/automaton_control/config/: control.yaml
src/automaton/automaton_description/: CMakeLists.txt  package.xml
src/automaton/automaton_gazebo/: CMakeLists.txt  package.xml
src/automaton/automaton_gazebo/launch/: clearpath_playpen_world.launch.py  clearpath_race_world.launch.py  gazebo.launch.py
src/automaton/automaton_gazebo/worlds/: clearpath_playpen.world
src/automaton/automaton_rviz/: CMakeLists.txt  package.xml
src/automaton/automaton_rviz/launch/: automaton_rviz.launch.py
src/automaton/automaton_rviz/rviz/: model.rviz
src/geodetic_utils/launch/: gps.launch
src/geodetic_utils/src/: gps_to_pose_conversion_node.cpp  set_gps_reference_node.cpp
src/jackal_description/launch/: description_own.launch  gazebo_launch.launch
src/jackal_description/rviz/: jackal_config.rviz
src/jackal_description/urdf/: accessories.urdf.xacro  jackal.gazebo  jackal.urdf.xacro
src/localization/: CMakeLists.txt  package.xml
src/localization/launch/: particle_filter.launch
src/localization/map/: house_map.pgm  house_map.yaml
src/localization/src/: particle_filter_node.cpp
src/my_robot/ball/: model.config  model.sdf
src/my_robot/launch/: amcl.launch  ball_chaser.launch  robot_description.launch  world.launch
src/my_robot/maps/: map.yaml
src/my_robot/urdf/: my_robot.gazebo  my_robot.xacro  vivaRob.xacro
src/my_robot/worlds/: ball_world.world  myWorld.world  my_world.world  newWorld.world
src/occupancygrid_mapping/: CMakeLists.txt  package.xml
src/occupancygrid_mapping/launch/: occupancy_map.launch
src/occupancygrid_mapping/msg/: LocalizedCloud.msg
src/occupancygrid_mapping/src/: fake_localizer_node.cpp  laserProjection_node.cpp  occupancy_grid_node.cpp
src/odom_to_trajectory/launch/: create_trajectory.launch
src/odom_to_trajectory/scripts/: path_ekf_plotter.py  path_ground_truth_plotter.py  path_odom_plotter.py
src/perception/: CMakeLists.txt  package.xml
src/perception/src/: scan_merger.cpp
src/robot_description/: package.xml
src/robot_description/config/: control.yaml
src/robot_description/launch/: description.launch  gazebo_automaton.launch
src/robot_description/rviz_config/: urdf.rviz
src/robot_description/urdf/: automaton.gazebo  automaton.urdf.xacro  laser.urdf.xacro
src/sensor_fusion/: CMakeLists.txt  README.md  package.xml
src/sensor_fusion/config/: sensor_fusion.yaml
src/slam/: CMakeLists.txt  package.xml
(+38 files in other folders)
