<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>automaton_rviz</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="manoharsabari1@gmail.com">sam</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>automaton_description</depend>
  <!-- <depend>joint_state_publisher</depend> -->
  <!-- <depend>joint_state_publisher_gui</depend> -->
  <!-- <depend>rqt_console</depend> -->
  <!-- <depend>rqt_gui</depend> -->
  <!-- <depend>rqt_robot_mointor</depend> -->
  <!-- <depend>rviz</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
